MAINT-1688 Add integration with new Term-Validation-Service.