@@ -30,6 +30,7 @@ import org.springframework.security.core.context.SecurityContext;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.*;
 import java.util.concurrent.ExecutorService;
 import java.util.stream.Collectors;
@@ -271,8 +272,8 @@ public class BranchMergeService {
 
 		String idField;
 		try {
-			idField = componentClass.newInstance().getIdField();
-		} catch (InstantiationException | IllegalAccessException e) {
+			idField = componentClass.getConstructor().newInstance().getIdField();
+		} catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
 			throw new ServiceException("Failed to resolve id field of snomed component.", e);
 		}
 
